# SuperMouseAI

./: .gitignore  CHANGELOG.md  LICENSE-FSL-1.1-MIT.md  NOTES.md  README.md  cliff.toml  deno.json  package.json  pnpm-lock.yaml  pre-release-update-latest.json  svelte.config.js  tsconfig.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-feature_request.yml  03-general_report.yml  config.yml
.github/workflows/: deno-check.yml  open-blas-find.yml  publish.yml  rust-check.yml  test-openblas.yml  test.yml  win-simple-build.yml  windows-simple-build.yml
install-helper/: super-mouse-windows-helper.bat
src/: app.css  app.html
src-tauri/: CHANGELOG.md  Cargo.toml  Info.plist  LICENSE-FSL-1.1-ALv2.md  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/: whisper-model-info.md
src-tauri/src/: command.rs  events.rs  lib.rs  main.rs  mutter.rs  transcript.rs  types.rs  utils.rs
src-tauri/windows/: hooks.nsi  installer.nsi
src-tauri/windows/llm-gen/: basic.nsis  error-handling.nsis  hook-adv.nsi  hook-basic.nsi  new-example.nsi  progress-tracing.nsis  suggested.nsis
src/lib/: AudioPreviewer.svelte  AudioTranscriber.svelte  MicRecorder.svelte  PermissionsPage.svelte  ShortcutSettings.svelte  WhisperOptions.svelte  bindings.ts  constants.ts  myUtils.ts  notificationSystem.svelte.ts  store.svelte.ts  store.ts  types.ts  utils.ts
src/lib/components/: AppOptions.svelte  AudioTranscriber.svelte  CustomShortcut.svelte  DangerZone.svelte  Loading.svelte  MenuScreen.svelte  MicRecorder.svelte  PermissionBar.svelte  PermissionButton.svelte  PermissionsPage.svelte  RecordingButton.svelte  ShortcutSettings.svelte  SingleCollapsable.svelte  Status.svelte  Tab.svelte  ThemeDropdown.svelte  TranscriptionViewer.svelte  UpdateChecker.svelte  WhisperModelManager.svelte  WhisperOptions.svelte
src/lib/components/ui/: CollapseableFieldSet.svelte  Loading.svelte  MicrophoneDropdown.svelte  ModelDropdown.svelte  SingleCollapsable.svelte  Status.svelte  Tab.svelte  ThemeDropdown.svelte  ToggleSwitch.svelte
src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte  index.ts
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-overlay.svelte  index.ts
src/lib/components/ui/sonner/: sonner.svelte
src/lib/components/ui/switch/: index.ts  switch.svelte
src/lib/components/ui/textarea/: index.ts  textarea.svelte
src/params/: dev.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/app/: +layout.svelte  +page.svelte
src/routes/overlay/: +page.svelte
src/routes/tests/: +page.ts
src/routes/tests/notifier/: +page.svelte
