[package]
name = "super-mouse-ai"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "super_mouse_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audrey = "0.3.0"
log = "0.4.21"
num = "0.4.3"
num_cpus = "1.16.0"
rodio = { version = "0.20.1" }
strum = { version = "0.26.2", features = ["derive"] }
ureq = "3.0.4"
mouce = "0.2.50"

[target.'cfg(target_os = "windows")'.dependencies]
# NOTE: CUDA feature separate feature flag
whisper-rs = { version = "0.13.2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["metal"] } # , "whisper-cpp-log"

[features]
default = ["symphonia-all", "minimp3"]

# simd = []
# coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
# metal = ["whisper-rs/metal"]

symphonia-aac = ["rodio/symphonia-aac"]
symphonia-all = ["rodio/symphonia-all"]
symphonia-flac = ["rodio/symphonia-flac"]
symphonia-isomp4 = ["rodio/symphonia-isomp4"]
symphonia-mp3 = ["rodio/symphonia-mp3"]
symphonia-vorbis = ["rodio/symphonia-vorbis"]
symphonia-wav = ["rodio/symphonia-wav"]
minimp3 = ["rodio/minimp3"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
