[package]
name = "super-mouse-ai"
repository = "https://github.com/SurajSSingh/SuperMouseAI"
version = "0.8.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "FSL-1.1-MIT OR FSL-1.1-ALv2"
readme = "../README.md"
keywords = ["voice-transcription", "tauri", "whisper-rs"]
categories = ["accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "super_mouse_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
audrey = "0.3.0"
log = "0.4.21"
num = "0.4.3"
num_cpus = "1.16.0"
sysinfo = "0.34"
gfxinfo = "0.1.2"
rodio = { version = "0.20.1" }
strum = { version = "0.27.1", features = ["derive"] }
ureq = "3.0.4"
mouce = "0.2.50"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
device_query = "3.0.0"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
enigo = "0.3.0"
regex = "1.11.1"
tauri-plugin-sentry = "0.4"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-upload = "2"

[target.'cfg(target_os = "windows")'.dependencies]
# NOTE: CUDA feature separate feature flag
whisper-rs = { version = "0.14.2", features = ["vulkan"] }

[target.'cfg(all(target_os = "macos", target_arch="aarch64"))'.dependencies]
whisper-rs = { version = "0.14.2", features = ["metal", "coreml"] }

[target.'cfg(all(target_os = "macos", target_arch="x86_64"))'.dependencies]
whisper-rs = { version = "0.14.2", features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.14.2", features = [] }

[features]
default = ["symphonia-all", "minimp3", "openmp", "overlay"]

openblas = ["whisper-rs/openblas"]
openmp = ["whisper-rs/openmp"]
# For better CPU optimization
cpu-opt = ["whisper-rs/openblas", "whisper-rs/openmp"]
# Used generally for GPU
vulkan = ["whisper-rs/vulkan"]

symphonia-aac = ["rodio/symphonia-aac"]
symphonia-all = ["rodio/symphonia-all"]
symphonia-flac = ["rodio/symphonia-flac"]
symphonia-isomp4 = ["rodio/symphonia-isomp4"]
symphonia-mp3 = ["rodio/symphonia-mp3"]
symphonia-vorbis = ["rodio/symphonia-vorbis"]
symphonia-wav = ["rodio/symphonia-wav"]
minimp3 = ["rodio/minimp3"]

log-trace = []       # Feature to log everything
log-issues-only = [] # Feature to log only issue (warn and error)
log-none = []        # Feature to log nothing

export-bindings-only = []
overlay = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

# From https://v2.tauri.app/concept/size/

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
